--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -203,7 +203,7 @@
     <ClCompile Include="source\ModePause.cpp" />
     <ClCompile Include="source\SlaBlockPattern2.cpp" />
     <ClCompile Include="source\CrystarPattern4.cpp" />
-    <ClCompile Include="source\EnemyPool.cpp" />
+    <ClCompile Include="source\EnemyManeger.cpp" />
     <ClCompile Include="source\BreakableBuilding.cpp" />
     <ClCompile Include="source\myJson.cpp" />
     <ClCompile Include="source\bone.cpp" />
@@ -290,7 +290,7 @@
     <ClInclude Include="source\ModePause.h" />
     <ClInclude Include="source\SlaBlockPattern2.h" />
     <ClInclude Include="source\CrystarPattern4.h" />
-    <ClInclude Include="source\EnemyPool.h" />
+    <ClInclude Include="source\EnemyManeger.h" />
     <ClInclude Include="source\EnemyStract.h" />
     <ClInclude Include="source\BreakableBuilding.h" />
     <ClInclude Include="source\myJson.h" />
