--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AfterImage.cpp" />
     <ClCompile Include="source\Afterglow.cpp" />
     <ClCompile Include="source\BoardParabola.cpp" />
     <ClCompile Include="source\AnimationChain.cpp" />
@@ -236,6 +237,7 @@
     <ClCompile Include="source\UIBossHp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AfterImage.h" />
     <ClInclude Include="source\Afterglow.h" />
     <ClInclude Include="source\BoardParabola.h" />
     <ClInclude Include="source\AnimationChain.h" />
