AfterImage.cpp, AfterImage.hのをsourceフォルダに移行。

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,8 +155,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AfterImage.cpp" />
     <ClCompile Include="source\Afterglow.cpp" />
+    <ClCompile Include="source\AfterImage.cpp" />
     <ClCompile Include="source\BoardParabola.cpp" />
     <ClCompile Include="source\AnimationChain.cpp" />
     <ClCompile Include="source\ModeMovie.cpp" />
@@ -237,8 +237,8 @@
     <ClCompile Include="source\UIBossHp.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AfterImage.h" />
     <ClInclude Include="source\Afterglow.h" />
+    <ClInclude Include="source\AfterImage.h" />
     <ClInclude Include="source\BoardParabola.h" />
     <ClInclude Include="source\AnimationChain.h" />
     <ClInclude Include="source\ModeMovie.h" />
